syntax = "proto3";

package heyrenee.v1;

option go_package = "github.com/HeyReneeInc/proto/golang/heyrenee/v1";

import "heyrenee/v1/messages/rpm_schedule.proto";
import "heyrenee/v1/messages/rpm_measurement.proto";
import "heyrenee/v1/options/auth.proto";

// RpmService
//
// The RpmService provides access to resources related to Remote Patient Monitoring (RPM).
service RpmService {
  // ListRpmSchedules retrieves a list of a Patient's RpmSchedules. These schedules specify when a patient should use
  // RPM devices to take different RPM measurements.
  rpc ListRpmSchedules(ListRpmSchedulesRequest) returns (ListRpmSchedulesResponse) {
    option (heyrenee.v1.options.authenticated) = true;
  }
  // ListRpmMeasurements retrieves a list of RpmMeasurements for a specific RpmSchedule. These measurements represent a
  // single event where an RPM device was used to take a measurement. The RpmMeasurement contains a list of RpmResults
  // where each individual result of the measurement event is listed.
  rpc ListRpmMeasurements(ListRpmMeasurementsRequest) returns (ListRpmMeasurementsResponse) {
    option (heyrenee.v1.options.authenticated) = true;
  }
}

// Request message for ListRpmSchedules.
message ListRpmSchedulesRequest {
  // The ID of the Patient to return RpmSchedules for. Required.
  string patient_id = 1 [(heyrenee.v1.options.field_authorization) = FIELD_AUTHORIZATION_PATIENT];
  // The status of the RpmSchedules. If specified, only RpmSchedules of this status are returned.
  heyrenee.v1.messages.RpmScheduleStatus rpm_schedule_status = 2;
}

// Response message for ListRpmSchedules.
message ListRpmSchedulesResponse {
  // The list of RpmSchedules.
  repeated heyrenee.v1.messages.RpmSchedule rpm_schedules = 1;
}

// Request message for ListRpmMeasurements.
message ListRpmMeasurementsRequest {
  // The ID of the RpmSchedule to return RpmMeasurements for. Required.
  string rpm_schedule_id = 1 [(heyrenee.v1.options.field_authorization) = FIELD_AUTHORIZATION_RPM_SCHEDULE];
}

// Response message for ListRpmMeasurements.
message ListRpmMeasurementsResponse {
  // The list of RpmMeasurements.
  repeated heyrenee.v1.messages.RpmMeasurement rpm_measurements = 1;
}
